# vastu

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/vastu/: __init__.py  cli.py  models.py  report.py
src/vastu/generator/: __init__.py  floor_plan.py  optimizer.py  rooms.py
src/vastu/vastu_rules/: __init__.py  compliance.py  directions.py  remedies.py
tests/: test_benchmark.py  test_compliance.py  test_core.py  test_directions.py  test_generator.py  test_integration.py  test_models.py  test_remedies.py
