[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vastu"
version = "0.1.0"
description = "AI Floor Plan Generator with Vastu Shastra Compliance"
authors = [
    {name = "Mukunda Katta"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
vastu = "vastu.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
